<resources>
    <string name="app_name">Fat2Fit</string>
    <string name="step_count">Step count:</string>
    <string name="calories_burned">Calories burned:</string>
    <string name="distance_in_km">Distance (in km):</string>
    <string name="there_would_be_a_nice_chart_trust_me">There would be a nice chart, trust me!</string>
    <string name="daily_goals_progress">Daily goals progress:</string>
    <string name="welcome_to_fat2fit_the_ultimate_fitness_app_created_especially_for_lazy_bastards_like_you">Welcome to Fat2Fit, the ultimate fitness app created especially for lazy bastards like you.</string>
    <string name="Help" />
    <string name="Settings" />
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
</resources>
