<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/goalsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dailyGoalsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/daily_goals_progress"
            android:textColor="@color/colorAccent"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/stepsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/step_count"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/stepsProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/distance_in_km"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/distanceProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/caloriesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/calories_burned"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/caloriesProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statisticsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temporaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/there_would_be_a_nice_chart_trust_me"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>
